Increased the font size of the nav links Changed the size of our mentor picture in the mobile view Set a z-index value for the header in the about us page to fix its appearance on scroll

--- a/css/header.css
+++ b/css/header.css
@@ -45,6 +45,7 @@ nav {
 .nav-menu {
   display: flex;
   list-style: none;
+  font-size: 1.3rem;
 }
 .nav-menu li:not(:last-child) {
   margin-right: 1.5rem;
@@ -70,9 +71,10 @@ nav {
 .nav-call-to-action a:first-child {
   padding: 0.5rem 0.5rem;
   margin-right: 0.2rem;
+  font-size: 1.3rem;
 }
 .nav-call-to-action a:last-child {
-  padding: 0.6rem 0.6rem 0.5rem 0.6rem;
+  padding: 0.8rem 0.6rem 0.6rem 0.6rem;
 }
 /* //FOOTER SECTION// */
 
