--- a/css/politics.css
+++ b/css/politics.css
@@ -42,6 +42,7 @@ nav {
 .nav-menu {
   display: flex;
   list-style: none;
+  font-size: 1.3rem;
 }
 .nav-menu li:not(:last-child) {
   margin-right: 1.5rem;
@@ -67,9 +68,10 @@ nav {
 .nav-call-to-action a:first-child {
   padding: 0.5rem 0.5rem;
   margin-right: 0.2rem;
+  font-size: 1.3rem;
 }
 .nav-call-to-action a:last-child {
-  padding: 0.6rem 0.6rem 0.5rem 0.6rem;
+  padding: 0.8rem 0.6rem 0.6rem 0.6rem;
 }
 
 /* //MAIN SECTION// */
